# ArduNetSwitch

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: .gitignore  CMakeLists.txt
docs/: Doxyfile
include/: CAppServer.h  CBuffer.h  CHttpResponse.h  CHttpServer.h  CStringView.h  HttpConstants.h  Switch.h  base64.h  mac.h  persistent.h  stringview.h
resources/: .gitignore  GenerateKeys.cmake  LinkWebpages.cmake  admin.html  badrequest.html  forbidden.html  index.html  make_header.py  notfound.html
src/: CAppServer.cpp  CBuffer.cpp  CHttpResponse.cpp  CHttpServer.cpp  CStringView.cpp  HttpConstants.c  Switch.cpp  base64.c  mac.c  main.cpp  persistent.c  stringview.c
